--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backgroundBlack">#121212</color>
+    <color name="cardDark">#1E1E1E</color>
+    <color name="textWhite">#FFFFFF</color>
+    <color name="textGray">#9E9E9E</color>
+    <color name="textLightGray">#757575</color>
+    <color name="dividerDark">#2A2A2A</color>
+    <color name="accentGreen">#4CAF50</color>
+    <color name="profile_placeholder">#D3D3D3</color>
 </resources>
